<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/notification_text"
        android:textColor="@color/dark_red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="125dp" />

    <TextView
        android:id="@+id/fertile_notif_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/fertile_notif_text"
        android:textColor="@color/darkest_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fertile_notif_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fertile_notif_switch" />

    <TextView
        android:id="@+id/fertile_days_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:text="@string/fertile_days_notif"
        android:textColor="@color/darkest_red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fertile_notif_text" />

    <TextView
        android:id="@+id/period_notif_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="33dp"
        android:text="@string/period_notif_text"
        android:textColor="@color/darkest_red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fertile_days_notif" />

    <TextView
        android:id="@+id/period_days_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="@string/period_days_notif"
        android:textColor="@color/darkest_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/period_notif_spinner"
        app:layout_constraintTop_toTopOf="@+id/period_notif_spinner" />

    <Switch
        android:id="@+id/fertile_notif_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="28dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/period_notif_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/period_notif_spinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/fertile_notif_spinner"
        android:layout_width="96dp"
        android:layout_height="28dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/period_notif_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fertile_notif_switch" />

    <Spinner
        android:id="@+id/period_notif_spinner"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="@+id/fertile_notif_spinner"
        app:layout_constraintStart_toEndOf="@+id/notification_text"
        app:layout_constraintTop_toBottomOf="@+id/period_notif_text" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        app:itemBackground="@color/pink"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>