<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".CalendarActivity"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:textColor="@color/dark_red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:layout_editor_absoluteX="113dp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CustomCalendarMonth"
        android:dateTextAppearance="@style/CustomCalendarDay"
        android:weekDayTextAppearance="@style/CustomCalendarWeek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/next_period_btn"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/red"
        android:text="@string/next_period"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/next_fertile_btn"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/next_fertility_period"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_period_btn"
        app:layout_constraintVertical_bias="0.149" />

</androidx.constraintlayout.widget.ConstraintLayout>